android-platform-system-core (1:6.0.1+r16-4) UNRELEASED; urgency=medium

  * Install libraries to DEB_HOST_MULTIARCH path
  * Update Standards-Version to 3.9.8 (no changes)
  * Switch from using OpenSSL to BoringSSL

 -- Kai-Chung Yan <seamlikok@gmail.com>  Tue, 17 May 2016 23:22:21 +0800

android-platform-system-core (1:6.0.1+r16-3) unstable; urgency=medium

  * Fix package name typo: android-{zipfile=>libzipfile}(-dev)
  * Sponsored upload (Closes: #817863)

 -- Kai-Chung Yan <seamlikok@gmail.com>  Sun, 06 Mar 2016 15:02:52 +0800

android-platform-system-core (1:6.0.1+r16-2) unstable; urgency=medium

  * android-platform-system-core-header Provides android-system-dev
  * android-libzipfile(-dev) returns as transisional dummy packages
  * adb and fastboot do not depend on android-sdk-platform-tools-common for now

 -- Kai-Chung Yan <seamlikok@gmail.com>  Thu, 03 Mar 2016 17:15:35 +0800

android-platform-system-core (1:6.0.1+r16-1) unstable; urgency=medium

  * New upstream release (Closes: #806375)
  * Only execute build commands on amd64 & i386
  * d/control: adb & fastboot Provides their android-tools-* counterparts
  * Pull bash-completion for adb & fastboot from src:android-tools/5.1.1.r29-2
  * Add manpages for adb & fastboot

 -- Kai-Chung Yan <seamlikok@gmail.com>  Tue, 16 Feb 2016 14:54:25 +0800

android-platform-system-core (1:6.0.0+r26-1) unstable; urgency=medium

  * Built without any build-profiles
    - Restore <!stage1> sections in d/control
    - Remove DEB_BUILD_PROFILES in d/rules
  * New fastboot_typo.diff: Fix typo

 -- Kai-Chung Yan <seamlikok@gmail.com>  Mon, 08 Feb 2016 16:16:59 +0800

android-platform-system-core (1:6.0.0+r26-1~stage1.2) unstable; urgency=medium

  * upload to unstable

 -- Hans-Christoph Steiner <hans@eds.org>  Sun, 07 Feb 2016 22:55:25 +0100

android-platform-system-core (1:6.0.0+r26-1~stage1.1) experimental; urgency=medium

  * d/control:
    - Use HTTPS for Vcs-Browser
    - Restrict AOSP packages to above 6.0.0