@@ -3,9 +3,9 @@ SOURCES = file.cpp \
           stringprintf.cpp \
           strings.cpp
 SOURCES := $(foreach source, $(SOURCES), base/$(source))
-CXXFLAGS += -fPIC -std=gnu++11
+CXXFLAGS += -std=gnu++11
 CPPFLAGS += -include android/arch/AndroidConfig.h -Iinclude -Ibase/include
-LDFLAGS += -shared -Wl,-soname,$(NAME).so.0 \
+LDFLAGS += -fPIC -shared -Wl,-soname,$(NAME).so.0 \
            -Wl,-rpath=/usr/lib/$(DEB_HOST_MULTIARCH)/android -L. -llog
 
 build: $(SOURCES)
