@@ -24,11 +24,11 @@ SOURCES = BasicHashtable.cpp \
           misc.cpp \
           Looper.cpp
 SOURCES := $(foreach source, $(SOURCES), libutils/$(source))
-CXXFLAGS += -fPIC -std=gnu++11
+CXXFLAGS += -std=gnu++11
 CPPFLAGS += -include android/arch/AndroidConfig.h \
             -Iinclude -Idebian \
             -DLIBUTILS_NATIVE=1
-LDFLAGS += -shared -Wl,-soname,$(NAME).so.0 \
+LDFLAGS += -fPIC -shared -Wl,-soname,$(NAME).so.0 \
            -Wl,-rpath=/usr/lib/$(DEB_HOST_MULTIARCH)/android \
            -lpthread -L. -llog -lcutils -lbacktrace
 
