@@ -1,10 +1,10 @@
 NAME = libziparchive
 SOURCES = zip_archive.cc
 SOURCES := $(foreach source, $(SOURCES), libziparchive/$(source))
-CXXFLAGS += -fPIC -std=gnu++11
+CXXFLAGS += -std=gnu++11
 CPPFLAGS += -include android/arch/AndroidConfig.h \
             -Iinclude -Ibase/include
-LDFLAGS += -shared -Wl,-soname,$(NAME).so.0 \
+LDFLAGS += -fPIC -shared -Wl,-soname,$(NAME).so.0 \
            -Wl,-rpath=/usr/lib/$(DEB_HOST_MULTIARCH)/android \
            -lz -L. -lutils -llog -lbase
 
