@@ -5,6 +5,7 @@ include /usr/share/dpkg/pkg-info.mk
 
 UPSTREAM_TAG = android-$(subst +,_,$(DEB_VERSION_UPSTREAM))
 export DEB_HOST_MULTIARCH
+export DEB_BUILD_MAINT_OPTIONS = hardening=+all
 
 # ORDER IS IMPORTANT!
 STAGE1_COMPONENTS = liblog \
